--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@emotion/native": "^11.0.0",
-    "@emotion/react": "^11.8.2"
+    "@emotion/react": "^11.8.2",
+    "react-dom": "^17.0.2",
+    "react-native-web": "^0.17.7"
   },
   "devDependencies": {
     "typescript": "^4.6.3"
