--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -17,8 +17,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
-    "rootDir": "../../"
+    "jsx": "react-jsx",
+    "rootDir": "../../",
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src"
