rename project to pengepantry and @pengepantry/components to @pengepantry/core

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@penge-pantry/mono",
+  "name": "pengepantry",
   "private": true,
   "scripts": {
     "reset": "find . -type dir -name node_modules | xargs rm -rf && rm -rf yarn.lock"
