add shared components to 'core' package and corresponding story. Had to add tsc-alias to get module resolution to work when importing the @core package (tsc-alias converts the absolute paths to relatives).
Not related to code but a config issue I ran into: had to set the default nvm - I think xcode uses this when running the iOS build

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pengepantry",
   "private": true,
   "scripts": {
+    "dev": "yarn workspaces run dev",
     "reset": "find . -type dir -name node_modules | xargs rm -rf && rm -rf yarn.lock"
   },
   "workspaces": {
