--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -15,10 +15,7 @@
     "strictPropertyInitialization": false,
     "declaration": true,
     "jsx": "react",
-    "baseUrl": "src",
-    "paths": {
-      "~/*": ["*"]
-    }
+    "baseUrl": "src"
   },
   "include": ["src"]
 }
