--- a/packages/app/ios/app/Info.plist
+++ b/packages/app/ios/app/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>CamphorProBold.otf</string>
+		<string>CamphorProMedium.otf</string>
+		<string>CamphorProRegular.otf</string>
+		<string>CamphorProRegularItalic.otf</string>
+	</array>
 </dict>
 </plist>
