--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@pengepantry/core": "0.1.0",
     "react": "17.0.2",
-    "react-native": "0.68.0"
+    "react-native": "0.68.0",
+    "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
