--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,7 @@
     "@emotion/native": "^11.0.0",
     "@emotion/react": "^11.8.2",
     "react-dom": "^17.0.2",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "^0.17.7"
   },
   "devDependencies": {
