add react-native-svg packages

--- a/packages/app/ios/Podfile
+++ b/packages/app/ios/Podfile
@@ -20,6 +20,8 @@ target 'app' do
   )
 
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'appTests' do
     inherit! :complete
     # Pods for testing
