add redux store, entities, types, theme and utils to core. Added react-navigation and RNScreens to app

--- a/packages/app/ios/Podfile
+++ b/packages/app/ios/Podfile
@@ -22,6 +22,10 @@ target 'app' do
 
   pod 'RNSVG', :path => '../../../node_modules/react-native-svg'
 
+  pod 'RNScreens', :path => '../../../node_modules/react-native-screens'
+
+  pod 'react-native-safe-area-context', :path => '../../../node_modules/react-native-safe-area-context'
+
   target 'appTests' do
     inherit! :complete
     # Pods for testing
