--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,12 +11,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@pengepantry/core": "0.1.0",
     "react": "17.0.2",
-    "react-native": "0.68.1"
-  },
-  "peerDependencies": {
-    "react-native": "^0.68.0"
+    "react-native": "^0.68.1",
+    "@pengepantry/core": "0.1.0",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
