--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,15 +8,25 @@
     "build:watch": "tsc -w & tsc-alias -w"
   },
   "dependencies": {
+    "@apollo/client": "3.3.9",
     "@emotion/native": "^11.0.0",
     "@emotion/react": "^11.8.2",
+    "@reduxjs/toolkit": "^1.8.1",
+    "graphql": "^16.3.0",
     "react-dom": "^17.0.2",
-    "react-native": "^0.68.1",
     "react-native-svg": "^12.3.0",
-    "react-native-web": "^0.17.7"
+    "react-native-web": "^0.17.7",
+    "react-redux": "^7.2.8",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
+    "mock-apollo-client": "^1.2.0",
     "tsc-alias": "^1.6.6",
     "typescript": "^4.6.3"
+  },
+  "peerDependencies": {
+    "react": "17.0.2",
+    "react-native": "^0.68.01"
   }
 }
