--- a/packages/app/ios/Podfile
+++ b/packages/app/ios/Podfile
@@ -20,7 +20,7 @@ target 'app' do
   )
 
 
-  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+  pod 'RNSVG', :path => '../../../node_modules/react-native-svg'
 
   target 'appTests' do
     inherit! :complete
