--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,15 +6,17 @@
     "android": "react-native run-android",
     "android:emulator": "~/Library/Android/sdk/tools/emulator @Pixel_4a_API_Tiramisu",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@pengepantry/core": "0.1.0",
     "react": "17.0.2",
-    "react-native": "0.68.0",
-    "react-native-svg": "^12.3.0"
+    "react-native": "0.68.1"
+  },
+  "peerDependencies": {
+    "react-native": "^0.68.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -34,9 +36,6 @@
   },
   "resolutions": {
     "@types/react": "^17"
-  },
-  "workspaces": {
-    "nohoist": ["react-native-svg"]
   },
   "jest": {
     "preset": "react-native",
