--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,12 +11,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "^0.68.1",
     "@pengepantry/core": "0.1.0",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
     "@react-navigation/stack": "^6.2.1",
+    "react": "17.0.2",
+    "react-native": "^0.68.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.10.1"
   },
