--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -57,7 +57,7 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-    "baseUrl": "src"
+    "baseUrl": "./src" /* Base directory to resolve non-absolute module names. */
   },
   "exclude": [
     "node_modules", "babel.config.js", "metro.config.js", "jest.config.js", "../../node_modules"
