--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@pengepantry/core": "0.1.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
