--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -15,7 +15,7 @@
     "strictPropertyInitialization": false,
     "declaration": true,
     "jsx": "react",
-    "baseUrl": "src"
+    "baseUrl": "./src"
   },
   "include": ["src"]
 }
