--- a/packages/app/ios/app/Info.plist
+++ b/packages/app/ios/app/Info.plist
@@ -57,6 +57,8 @@
 		<string>CamphorProMedium.otf</string>
 		<string>CamphorProRegular.otf</string>
 		<string>CamphorProRegularItalic.otf</string>
+		<string>PoppinsRegular.ttf</string>
+		<string>PoppinsRegularItalic.ttf</string>
 	</array>
 </dict>
 </plist>
