--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@pengepantry/core": "0.1.0"
+    "@pengepantry/core": "0.1.0",
+    "craco": "^0.0.3"
   },
   "scripts": {
-    "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "start": "cross-env SKIP_PREFLIGHT_CHECK=true craco start",
     "build": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -41,7 +42,10 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.4.21",
     "@storybook/testing-library": "^0.0.9",
+    "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
-    "react-scripts": "4.0.3"
+    "postcss": "^8.4.14",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.0.24"
   }
 }
