--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -19,6 +19,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "rootDir": "../../",
+    "baseUrl": "src",
     "noFallthroughCasesInSwitch": true
   },
   "include": [
