add nextjs webapp and configure with react-native-web

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "nohoist": []
   },
   "dependencies": {
-    "react-native": "*",
+    "react": "18.2.0",
     "typescript": "4.4.4"
   },
   "devDependencies": {
