--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,8 +18,7 @@
     "@react-navigation/native-stack": "^6.6.1",
     "@react-navigation/stack": "^6.2.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "react": "17.0.2",
-    "react-native": "^0.68.1",
+    "react-native": "^0.68.01",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.10.1"
   },
@@ -38,6 +37,10 @@
     "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
+  },
+  "peerDependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "resolutions": {
     "@types/react": "^17"
