--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,6 @@
     "@emotion/react": "^11.8.2",
     "@reduxjs/toolkit": "^1.8.1",
     "graphql": "^16.3.0",
-    "react-dom": "^17.0.2",
     "react-native-svg": "^12.3.0",
     "react-native-web": "^0.17.7",
     "react-redux": "^7.2.8",
@@ -27,7 +26,8 @@
     "typescript": "^4.6.3"
   },
   "peerDependencies": {
-    "react": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "^0.68.01"
   }
 }
