--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typescript": "4.4.4"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "eslint-plugin-import": "^2.26.0"
   }
 }
