--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,7 @@
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
-    "twrnc": "^3.0.2-beta.1"
+    "twrnc": "^3.3.2"
   },
   "devDependencies": {
     "mock-apollo-client": "^1.2.0",
