--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -19,9 +19,7 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "babel-plugin-react-native-web": "^0.18.1",
-    "babel-preset-next": "^1.4.0",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "babel-preset-next": "^1.4.0"
   },
   "peerDependencies": {
     "react": "18.2.0"
