--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,9 +9,8 @@
   },
   "dependencies": {
     "@apollo/client": "3.3.9",
-    "@emotion/native": "^11.0.0",
-    "@emotion/react": "^11.8.2",
     "@reduxjs/toolkit": "^1.8.1",
+    "classnames": "^2.3.1",
     "graphql": "^16.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-web": "^0.17.7",
