--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -18,8 +18,11 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
     "babel-plugin-react-native-web": "^0.18.1",
-    "babel-preset-next": "^1.4.0"
+    "babel-preset-next": "^1.4.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4"
   },
   "peerDependencies": {
     "react": "18.2.0"
