--- a/packages/webapp/tsconfig.json
+++ b/packages/webapp/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "rootDir": "../../",
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
