--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "classnames": "^2.3.1",
     "graphql": "^16.3.0",
+    "lodash": "^4.17.21",
     "react-native-svg": "^12.3.0",
     "react-native-web": "^0.17.7",
     "react-redux": "^7.2.8",
@@ -20,6 +21,7 @@
     "twrnc": "^3.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "mock-apollo-client": "^1.2.0",
     "tsc-alias": "^1.6.6",
     "typescript": "^4.6.3"
