add 'packages/api' and boilerplate @nestjs setup

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "packages": [
       "packages/*"
     ],
-    "nohoist": []
+    "nohoist": ["**/@nestjs", "**/@nestjs/**"]
   },
   "dependencies": {
     "react": "18.2.0",
