--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "typescript": "4.4.4"
+    "typescript": "4.7.4"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
     "@typescript-eslint/parser": "^5.28.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.26.0",
+    "ts-node": "^10.8.2"
   }
 }
