--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc && tsc-alias",
-    "build:watch": "tsc -w & tsc-alias -w"
+    "core": "tsc && tsc-alias",
+    "core:watch": "tsc -w & tsc-alias -w",
+    "schema:download": "ts-node scripts/download-schema.ts ",
+    "schema:codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "3.3.9",
     "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^1.0.0-alpha.1",
     "classnames": "^2.3.1",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
@@ -18,10 +21,18 @@
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
-    "twrnc": "^3.3.2"
+    "twrnc": "^3.3.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.5",
+    "@graphql-codegen/typescript-operations": "^2.4.3",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.17",
     "@types/lodash": "^4.14.182",
+    "@types/uuid": "^8.3.4",
     "mock-apollo-client": "^1.2.0",
     "tsc-alias": "^1.6.6",
     "typescript": "^4.6.3"
