WIP: fix broken react-native-svg on android;
Fix failure to find emulator - had to add paths to bash_profile: https://stackoverflow.com/questions/38835931/react-native-adb-reverse-enoent

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "packages": [
       "packages/*"
     ],
-    "nohoist": ["**/@nestjs", "**/@nestjs/**"]
+    "nohoist": [
+      "**/@nestjs",
+      "**/@nestjs/**"
+    ]
   },
   "dependencies": {
     "react": "18.2.0",
